[tool.poetry]
name = "python-project-init"
version = "0.1.0"
description = ""
authors = ["abdelmalek0 <djamaa.abdelmalek98@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
pygithub = "^2.4.0"
python-dotenv = "^1.0.1"
icecream = "^2.1.3"
rich = "^13.8.1"
simple-term-menu = "^1.6.4"
toml = "^0.10.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
